# reinforcement-learning

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
notebooks/: 00_warmup.ipynb  01_MultiArmBandit.ipynb
rl01/: bandits.py
tests/: test_bandit.py
