[tool.poetry]
name = "rl01"
version = "0.1.0"
description = "Course work for Artificial Intelligence: Reinforcement Learning in Python by the Lazy Programmer"
authors = ["Christopher Rogers <christopher.rogers@datawolf.ai>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ipykernel = "*"
pylint = "^2.16.2"
black = "^23.1.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
